--- a/painel_aluno.html
+++ b/painel_aluno.html
@@ -232,21 +232,25 @@
           document.getElementById('teacher-info').innerHTML = '<p>You are not currently linked to a teacher.</p>';
         }
 
-     // Função para carregar o progresso do aluno
 // Função para carregar o progresso do aluno
 function loadProgress(studentId) {
+  console.log("Carregando progresso para:", studentId); // Log para verificar o studentId
+
   const progressContainer = document.getElementById('progress-container');
   const progressRef = db.ref(`usuarios/${studentId}/progresso`);
 
   progressRef.once('value', snapshot => {
     if (snapshot.exists()) {
+      console.log("Dados de progresso encontrados:", snapshot.val()); // Log para verificar os dados de progresso
       let progressHTML = '<div class="progress-panel"><h3>Your Progress</h3>';
 
+      // Estrutura de Levels e Units
       Object.keys(structure).forEach(levelKey => {
         const level = levelKey.replace('Level', ''); // Remove "Level" do nome da chave
         let totalCompletedPhases = 0;
         let totalPhasesInLevel = 0;
 
+        // Calcular o progresso do Level em relação ao número de fases completas
         Object.keys(structure[levelKey]).forEach(unitKey => {
           const totalPhases = structure[levelKey][unitKey];
           const unitSnap = snapshot.child(`${levelKey}/${unitKey}`);
@@ -264,7 +268,11 @@ function loadProgress(studentId) {
           totalPhasesInLevel += totalPhases;
         });
 
+        // Cálculo da porcentagem de progresso do Level
         const progressPercentage = Math.round((totalCompletedPhases / totalPhasesInLevel) * 100);
+        console.log(`Progresso do Level ${level}: ${progressPercentage}%`); // Log para verificar o progresso de cada Level
+
+        // Definir cor da barra com base no progresso
         let colorClass = '';
         if (progressPercentage < 25) {
           colorClass = 'low';
@@ -274,6 +282,7 @@ function loadProgress(studentId) {
           colorClass = 'high';
         }
 
+        // Adicionar título do Level e barra de progresso
         progressHTML += `<h2>Level ${level}</h2>`;
         progressHTML += `
           <div class="progress-bar-container">
@@ -287,10 +296,11 @@ function loadProgress(studentId) {
       progressHTML += '</div>';
       progressContainer.innerHTML = progressHTML;
     } else {
+      console.log("Nenhum dado de progresso disponível para o usuário."); // Log se não houver dados de progresso
       progressContainer.innerHTML = '<p>No progress data available.</p>';
     }
   }).catch(error => {
-    console.error("Error loading progress:", error);
+    console.error("Erro ao carregar os dados de progresso:", error); // Log de erro
     progressContainer.innerHTML = '<p>Error loading progress data. Please try again later.</p>';
   });
 }
