--- a/painel_aluno.html
+++ b/painel_aluno.html
@@ -232,6 +232,11 @@
           document.getElementById('teacher-info').innerHTML = '<p>You are not currently linked to a teacher.</p>';
         }
 
+// **Chama a função loadProgress para carregar o progresso**
+        loadProgress(studentId);
+      });
+    }
+
 // Função para carregar o progresso do aluno
 function loadProgress(studentId) {
   console.log("Carregando progresso para:", studentId); // Log para verificar o studentId
