--- a/painel_aluno.html
+++ b/painel_aluno.html
@@ -237,7 +237,7 @@
       });
     }
 
-// Função para carregar o progresso do aluno
+// Função para carregar o progresso do aluno e renderizar os botões de unidades
 function loadProgress(studentId) {
   console.log("Carregando progresso para:", studentId); // Log para verificar o studentId
 
@@ -296,6 +296,35 @@ function loadProgress(studentId) {
             </div>
           </div>
         `;
+
+        // Renderizar botões para cada unidade do Level
+        Object.keys(structure[levelKey]).forEach(unitKey => {
+          const unitId = `${levelKey}-${unitKey}`;
+          const totalPhases = structure[levelKey][unitKey];
+          let completedPhases = 0;
+          
+          // Calcular o número de fases completas na unidade
+          const unitSnap = snapshot.child(`${levelKey}/${unitKey}`);
+          for (let phaseNumber = 1; phaseNumber <= totalPhases; phaseNumber++) {
+            const phaseKey = `fase${phaseNumber}`;
+            const phaseSnap = unitSnap.child(phaseKey);
+            const isComplete = phaseSnap.exists() && phaseSnap.val();
+
+            if (isComplete) {
+              completedPhases++;
+            }
+          }
+
+          // Adicionar o botão da unidade com o progresso da unidade
+          progressHTML += `
+            <div style="margin-top: 10px;">
+              <button onclick="toggleVisibility('${unitId}')">Unit ${unitKey.replace('Unit', '')}</button>
+              <div id="${unitId}" style="display: none; margin-left: 20px;">
+                <p>${completedPhases}/${totalPhases} phases completed</p>
+              </div>
+            </div>
+          `;
+        });
       });
 
       progressHTML += '</div>';
@@ -308,6 +337,12 @@ function loadProgress(studentId) {
     console.error("Erro ao carregar os dados de progresso:", error); // Log de erro
     progressContainer.innerHTML = '<p>Error loading progress data. Please try again later.</p>';
   });
+}
+
+// Função para alternar visibilidade da Unit
+function toggleVisibility(unitId) {
+  const unitDiv = document.getElementById(unitId);
+  unitDiv.style.display = unitDiv.style.display === 'none' ? 'block' : 'none';
 }
 
 // Evento para atualizar o avatar ao ser selecionado
