--- a/painel_aluno.html
+++ b/painel_aluno.html
@@ -237,7 +237,7 @@
       });
     }
 
-// Função para carregar o progresso do aluno e renderizar os botões de unidades
+// Função para carregar o progresso do aluno e renderizar as unidades, fases e notas
 function loadProgress(studentId) {
   console.log("Carregando progresso para:", studentId); // Log para verificar o studentId
 
@@ -297,13 +297,15 @@ function loadProgress(studentId) {
           </div>
         `;
 
-        // Renderizar botões para cada unidade do Level
+        // Renderizar botões e informações detalhadas para cada unidade
         Object.keys(structure[levelKey]).forEach(unitKey => {
           const unitId = `${levelKey}-${unitKey}`;
           const totalPhases = structure[levelKey][unitKey];
           let completedPhases = 0;
-          
-          // Calcular o número de fases completas na unidade
+          let phasesHTML = '';
+          let notesHTML = '';
+
+          // Calcular o número de fases completas e listar cada fase
           const unitSnap = snapshot.child(`${levelKey}/${unitKey}`);
           for (let phaseNumber = 1; phaseNumber <= totalPhases; phaseNumber++) {
             const phaseKey = `fase${phaseNumber}`;
@@ -313,14 +315,18 @@ function loadProgress(studentId) {
             if (isComplete) {
               completedPhases++;
             }
+
+            phasesHTML += `<p>Phase ${phaseNumber}: ${isComplete ? 'Complete ✅' : 'Incomplete ❌'}</p>`;
           }
 
-          // Adicionar o botão da unidade com o progresso da unidade
+          // Adicionar botão da unidade e detalhes com fases
           progressHTML += `
             <div style="margin-top: 10px;">
               <button onclick="toggleVisibility('${unitId}')">Unit ${unitKey.replace('Unit', '')}</button>
               <div id="${unitId}" style="display: none; margin-left: 20px;">
                 <p>${completedPhases}/${totalPhases} phases completed</p>
+                ${phasesHTML}
+                ${notesHTML || '<p>No scores available</p>'}
               </div>
             </div>
           `;
