--- a/painel_aluno.html
+++ b/painel_aluno.html
@@ -255,6 +255,9 @@ function loadProgress(studentId) {
         let totalCompletedPhases = 0;
         let totalPhasesInLevel = 0;
 
+        // Título do Level
+        progressHTML += `<h2>Level ${level}</h2>`;
+
         // Calcular o progresso do Level em relação ao número de fases completas
         Object.keys(structure[levelKey]).forEach(unitKey => {
           const totalPhases = structure[levelKey][unitKey];
@@ -315,8 +318,7 @@ function loadProgress(studentId) {
           colorClass = 'high';
         }
 
-        // Adicionar título do Level e barra de progresso
-        progressHTML += `<h2>Level ${level}</h2>`;
+        // Barra de progresso do Level
         progressHTML += `
           <div class="progress-bar-container">
             <div class="progress-bar-fill ${colorClass}" style="width: ${progressPercentage}%; position: relative;">
