--- a/painel_aluno.html
+++ b/painel_aluno.html
@@ -166,13 +166,37 @@
     <input type="text" id="student-email" readonly>
     
     <label for="student-avatar">Choose Avatar</label>
-    <select id="student-avatar">
-      <option value="avatar_aluno1.png">Avatar 1</option>
-      <option value="avatar_aluno2.png">Avatar 2</option>
-      <option value="avatar_aluno3.png">Avatar 3</option>
-      <option value="avatar_aluno4.png">Avatar 4</option>
-    </select>
-    <img id="avatar-preview" src="imagens/avatar_aluno1.png" alt="Avatar Preview" style="width: 100px; height: 100px; margin-top: 10px;">
+<div id="avatar-container" style="display: flex; flex-wrap: wrap;">
+  <div onclick="selectAvatar('avatar_aluno1.png')" style="cursor: pointer;">
+    <img src="imagens/avatar_aluno1.png" alt="Avatar 1" style="width: 50px; height: 50px; margin: 5px;">
+  </div>
+  <div onclick="selectAvatar('avatar_aluno2.png')" style="cursor: pointer;">
+    <img src="imagens/avatar_aluno2.png" alt="Avatar 2" style="width: 50px; height: 50px; margin: 5px;">
+  </div>
+  <div onclick="selectAvatar('avatar_aluno3.png')" style="cursor: pointer;">
+    <img src="imagens/avatar_aluno3.png" alt="Avatar 3" style="width: 50px; height: 50px; margin: 5px;">
+  </div>
+  <div onclick="selectAvatar('avatar_aluno4.png')" style="cursor: pointer;">
+    <img src="imagens/avatar_aluno4.png" alt="Avatar 4" style="width: 50px; height: 50px; margin: 5px;">
+  </div>
+  <div onclick="selectAvatar('avatar_aluno5.png')" style="cursor: pointer;">
+    <img src="imagens/avatar_aluno5.png" alt="Avatar 5" style="width: 50px; height: 50px; margin: 5px;">
+  </div>
+  <div onclick="selectAvatar('avatar_aluno6.png')" style="cursor: pointer;">
+    <img src="imagens/avatar_aluno6.png" alt="Avatar 6" style="width: 50px; height: 50px; margin: 5px;">
+  </div>
+  <div onclick="selectAvatar('avatar_aluno7.png')" style="cursor: pointer;">
+    <img src="imagens/avatar_aluno7.png" alt="Avatar 7" style="width: 50px; height: 50px; margin: 5px;">
+  </div>
+  <div onclick="selectAvatar('avatar_aluno8.png')" style="cursor: pointer;">
+    <img src="imagens/avatar_aluno8.png" alt="Avatar 8" style="width: 50px; height: 50px; margin: 5px;">
+  </div>
+  <div onclick="selectAvatar('avatar_aluno9.png')" style="cursor: pointer;">
+    <img src="imagens/avatar_aluno9.png" alt="Avatar 9" style="width: 50px; height: 50px; margin: 5px;">
+  </div>
+</div>
+<img id="avatar-preview" src="imagens/avatar_aluno1.png" alt="Avatar Preview" style="width: 100px; height: 100px; margin-top: 10px;">
+
     <div id="loading-spinner" style="display: none; margin-top: 10px;">Loading...</div>
 
     <button onclick="saveAvatarChoice()">Save Avatar</button>
@@ -486,6 +510,10 @@ const structure = {
 function toggleVisibility(unitId) {
   const unitDiv = document.getElementById(unitId);
   unitDiv.style.display = unitDiv.style.display === 'none' ? 'block' : 'none';
+}
+
+function selectAvatar(avatar) {
+  document.getElementById('avatar-preview').src = 'imagens/' + avatar;
 }
   </script>
 </body>
