--- a/painel_aluno.html
+++ b/painel_aluno.html
@@ -436,33 +436,10 @@ function toggleVisibility(unitId) {
   unitDiv.style.display = unitDiv.style.display === 'none' ? 'block' : 'none';
 }
 
-// Evento para atualizar o avatar ao ser selecionado
-document.getElementById('student-avatar').addEventListener('change', function() {
-  const avatar = this.value;
-  const avatarPreview = document.getElementById('avatar-preview');
-  const loadingSpinner = document.getElementById('loading-spinner');
-
-  loadingSpinner.style.display = 'block';
-  avatarPreview.style.display = 'none';
-
-  const img = new Image();
-  img.src = 'imagens/' + avatar;
-
-  img.onload = function() {
-    avatarPreview.src = img.src;
-    loadingSpinner.style.display = 'none';
-    avatarPreview.style.display = 'block';
-  };
-
-  img.onerror = function() {
-    loadingSpinner.textContent = 'Error loading avatar';
-  };
-});
-
 // Função para salvar a escolha do avatar
 function saveAvatarChoice() {
   const studentId = auth.currentUser.uid;
-  const avatar = document.getElementById('student-avatar').value;
+  const avatar = document.getElementById('avatar-preview').src.split('/').pop(); // Extrai o nome do arquivo do avatar
   const avatarRef = db.ref('usuarios/' + studentId + '/avatar');
 
   avatarRef.set(avatar).then(() => {
