--- a/painel_aluno.html
+++ b/painel_aluno.html
@@ -456,9 +456,10 @@ function loadTeacherInfo(teacherId) {
   teacherRef.once('value', snapshot => {
     const teacherData = snapshot.val();
     const teacherName = teacherData ? teacherData.nome : 'Unknown Teacher';
+    const teacherAvatar = teacherData && teacherData.avatar ? teacherData.avatar : 'default_avatar.png'; // Avatar padrão se não houver
 
     document.getElementById('teacher-info').innerHTML = `
-      <p>Linked to Teacher: ${teacherName}</p>
+      <p>Linked to Teacher: <img src="imagens/${teacherAvatar}" alt="Teacher Avatar" style="width: 30px; height: 30px; vertical-align: middle; border-radius: 50%;"> ${teacherName}</p>
       <button onclick="unlinkTeacher()">Unlink from Teacher</button>
     `;
   });
