--- a/Level1/Unit1/index.html
+++ b/Level1/Unit1/index.html
@@ -17,15 +17,25 @@
             display: flex;
             flex-direction: column;
             align-items: center;
-            justify-content: center;
+            /* Removido justify-content: center para permitir o scroll até o topo */
+        }
+
+        header {
+            position: sticky; /* Fixa o cabeçalho no topo */
+            top: 0;
+            background-color: #ffffff; /* Fundo para visibilidade */
+            width: 100%;
+            padding: 10px 0;
+            z-index: 10;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
         }
 
         header h1 {
             text-align: center;
             font-size: 2.5em;
-            color: #4CAF50; /* Cor verde para o título */
+            color: #4CAF50;
             font-family: Arial, sans-serif;
-            margin-bottom: 30px;
+            margin: 0;
             text-shadow: 1px 1px 2px #000000;
         }
 
@@ -44,7 +54,7 @@
             align-items: center;
             padding: 20px;
             background-color: #FFFFFF;
-            border: 2px solid #4CAF50; /* Borda verde */
+            border: 2px solid #4CAF50;
             border-radius: 10px;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
             transition: transform 0.3s ease, box-shadow 0.3s ease;
@@ -107,11 +117,18 @@
                     <img src="../../imagens/test.png" alt="Test">
                 </a>
                 <a href="lessonplan.html" class="activity-button">
-                    <img src="../../imagens/resources.png" alt="Resoucers">
+                    <img src="../../imagens/resources.png" alt="Resources">
                 </a>
              </div>
             <a href="../index.html" class="back-button">Back</a>
         </main>
     </div>
+
+    <!-- Script opcional para rolar ao topo ao carregar -->
+    <script>
+        window.addEventListener("load", () => {
+            window.scrollTo(0, 0);
+        });
+    </script>
 </body>
-</html> 
+</html>
