--- a/Level1/Unit1/index.html
+++ b/Level1/Unit1/index.html
@@ -8,7 +8,6 @@
     <style>
         .map-container {
             width: 100%;
-            height: 100vh;
             position: relative;
             background-image: url('../../imagens/fundo.png');
             background-repeat: repeat;
@@ -17,21 +16,17 @@
             display: flex;
             flex-direction: column;
             align-items: center;
-            /* Removido justify-content: center para permitir o scroll até o topo */
         }
 
         header {
-            position: sticky; /* Fixa o cabeçalho no topo */
-            top: 0;
-            background-color: #ffffff; /* Fundo para visibilidade */
             width: 100%;
             padding: 10px 0;
             z-index: 10;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            text-align: center;
+            background: none; /* Removendo o fundo branco */
         }
 
         header h1 {
-            text-align: center;
             font-size: 2.5em;
             color: #4CAF50;
             font-family: Arial, sans-serif;
@@ -124,7 +119,6 @@
         </main>
     </div>
 
-    <!-- Script opcional para rolar ao topo ao carregar -->
     <script>
         window.addEventListener("load", () => {
             window.scrollTo(0, 0);
