--- a/Level1/Unit1/index.html
+++ b/Level1/Unit1/index.html
@@ -23,7 +23,7 @@
             padding: 10px 0;
             z-index: 10;
             text-align: center;
-            background: none; /* Removendo o fundo branco */
+            background: none;
         }
 
         header h1 {
@@ -66,6 +66,34 @@
             box-shadow: 0 6px 12px rgba(0, 0, 0, 0.3);
         }
 
+        /* Estilo para o botão Teacher Resources ocupar duas colunas em telas maiores */
+        .teacher-resources {
+            grid-column: span 2;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            padding: 20px;
+            background-color: #FFFFFF;
+            border: 2px solid #4CAF50;
+            border-radius: 10px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+            transition: transform 0.3s ease, box-shadow 0.3s ease;
+        }
+
+        .teacher-resources img {
+            width: 100%;
+            height: auto;
+            max-width: 150px;
+        }
+
+        /* Responsividade para o botão Teacher Resources em telas menores */
+        @media (max-width: 600px) {
+            .teacher-resources {
+                grid-column: span 1;
+                max-width: 100%;
+            }
+        }
+
         .back-button {
             display: block;
             margin: 20px auto;
@@ -79,6 +107,7 @@
             transition: background-color 0.3s ease;
             text-align: center;
             text-decoration: none;
+            width: fit-content; /* Ajusta largura ao conteúdo */
         }
 
         .back-button:hover {
@@ -93,6 +122,10 @@
         </header>
         <main>
             <div class="activity-buttons">
+                <!-- Botão Teacher Resources ocupando duas colunas em telas grandes -->
+                <a href="lessonplan.html" class="teacher-resources">
+                    <img src="../../imagens/resources.png" alt="Teacher Resources">
+                </a>
                 <a href="listening.html" class="activity-button">
                     <img src="../../imagens/listening.png" alt="Listening">
                 </a>
@@ -110,9 +143,6 @@
                 </a>
                 <a href="test.html" class="activity-button">
                     <img src="../../imagens/test.png" alt="Test">
-                </a>
-                <a href="lessonplan.html" class="activity-button">
-                    <img src="../../imagens/resources.png" alt="Resources">
                 </a>
              </div>
             <a href="../index.html" class="back-button">Back</a>
