--- a/Level1/Unit1/index.html
+++ b/Level1/Unit1/index.html
@@ -34,6 +34,26 @@
             text-shadow: 1px 1px 2px #000000;
         }
 
+        .back-button {
+            display: block;
+            margin: 20px auto 10px auto;
+            padding: 10px 20px;
+            background-color: #000000; /* Preto */
+            color: #ffffff; /* Letras brancas */
+            border: none;
+            border-radius: 8px;
+            font-size: 1em;
+            cursor: pointer;
+            transition: background-color 0.3s ease;
+            text-align: center;
+            text-decoration: none;
+            width: fit-content;
+        }
+
+        .back-button:hover {
+            background-color: #333333; /* Cinza escuro ao passar o mouse */
+        }
+
         .activity-buttons {
             display: grid;
             grid-template-columns: repeat(2, 1fr);
@@ -88,30 +108,13 @@
 
         /* Responsividade para o botão Teacher Resources em telas menores */
         @media (max-width: 600px) {
-            .teacher-resources {
-                grid-column: span 1;
-                max-width: 100%;
+            .activity-buttons {
+                grid-template-columns: 1fr; /* Colocar todos os botões em uma única coluna */
             }
-        }
 
-        .back-button {
-            display: block;
-            margin: 20px auto;
-            padding: 10px 20px;
-            background-color: #4CAF50;
-            color: #fff;
-            border: none;
-            border-radius: 8px;
-            font-size: 1em;
-            cursor: pointer;
-            transition: background-color 0.3s ease;
-            text-align: center;
-            text-decoration: none;
-            width: fit-content; /* Ajusta largura ao conteúdo */
-        }
-
-        .back-button:hover {
-            background-color: #388E3C;
+            .teacher-resources {
+                grid-column: span 1; /* Ocupa toda a largura em telas menores */
+            }
         }
     </style>
 </head>
@@ -119,6 +122,8 @@
     <div class="map-container">
         <header>
             <h1>Select an Activity</h1>
+            <!-- Botão Back posicionado logo abaixo do título -->
+            <a href="../index.html" class="back-button">Back</a>
         </header>
         <main>
             <div class="activity-buttons">
@@ -145,7 +150,6 @@
                     <img src="../../imagens/test.png" alt="Test">
                 </a>
              </div>
-            <a href="../index.html" class="back-button">Back</a>
         </main>
     </div>
 
