--- a/Level1/Unit1/index.html
+++ b/Level1/Unit1/index.html
@@ -61,6 +61,7 @@
             padding: 20px;
             max-width: 800px;
             width: 100%;
+            justify-items: center; /* Centraliza a grade de botões */
         }
 
         .activity-button {
@@ -106,14 +107,14 @@
             max-width: 150px;
         }
 
-        /* Responsividade para o botão Teacher Resources em telas menores */
+        /* Responsividade para ajuste das colunas em telas pequenas */
         @media (max-width: 600px) {
             .activity-buttons {
-                grid-template-columns: 1fr; /* Colocar todos os botões em uma única coluna */
+                grid-template-columns: 1fr; /* Todos os botões em uma única coluna em telas muito pequenas */
             }
 
             .teacher-resources {
-                grid-column: span 1; /* Ocupa toda a largura em telas menores */
+                grid-column: span 1; /* Ocupa toda a largura em telas pequenas */
             }
         }
     </style>
