--- a/Level1/Unit1/index.html
+++ b/Level1/Unit1/index.html
@@ -36,7 +36,7 @@
 
         .back-button {
             display: block;
-            margin: 20px auto 10px auto;
+            margin: 10px auto 20px auto;
             padding: 10px 20px;
             background-color: #000000; /* Preto */
             color: #ffffff; /* Letras brancas */
@@ -61,10 +61,12 @@
             padding: 20px;
             max-width: 800px;
             width: 100%;
-            justify-items: center; /* Centraliza a grade de botões */
+            justify-items: center;
+            align-items: start;
         }
 
-        .activity-button {
+        .activity-button,
+        .teacher-resources {
             display: flex;
             justify-content: center;
             align-items: center;
@@ -74,15 +76,19 @@
             border-radius: 10px;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
             transition: transform 0.3s ease, box-shadow 0.3s ease;
+            width: 100%;
+            max-width: 360px;
         }
 
-        .activity-button img {
+        .activity-button img,
+        .teacher-resources img {
             width: 100%;
             height: auto;
             max-width: 150px;
         }
 
-        .activity-button:hover {
+        .activity-button:hover,
+        .teacher-resources:hover {
             transform: scale(1.05);
             box-shadow: 0 6px 12px rgba(0, 0, 0, 0.3);
         }
@@ -90,21 +96,6 @@
         /* Estilo para o botão Teacher Resources ocupar duas colunas em telas maiores */
         .teacher-resources {
             grid-column: span 2;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            padding: 20px;
-            background-color: #FFFFFF;
-            border: 2px solid #4CAF50;
-            border-radius: 10px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-            transition: transform 0.3s ease, box-shadow 0.3s ease;
-        }
-
-        .teacher-resources img {
-            width: 100%;
-            height: auto;
-            max-width: 150px;
         }
 
         /* Responsividade para ajuste das colunas em telas pequenas */
