--- a/Level1/Unit1/index.html
+++ b/Level1/Unit1/index.html
@@ -57,16 +57,15 @@
         .activity-buttons {
             display: grid;
             grid-template-columns: repeat(2, 1fr);
-            gap: 30px;
-            padding: 20px;
+            gap: 20px;
             max-width: 800px;
             width: 100%;
-            justify-items: center;
+            justify-content: center;
             align-items: start;
+            padding: 0 20px;
         }
 
-        .activity-button,
-        .teacher-resources {
+        .activity-button {
             display: flex;
             justify-content: center;
             align-items: center;
@@ -77,18 +76,16 @@
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
             transition: transform 0.3s ease, box-shadow 0.3s ease;
             width: 100%;
-            max-width: 360px;
+            box-sizing: border-box;
         }
 
-        .activity-button img,
-        .teacher-resources img {
+        .activity-button img {
             width: 100%;
             height: auto;
             max-width: 150px;
         }
 
-        .activity-button:hover,
-        .teacher-resources:hover {
+        .activity-button:hover {
             transform: scale(1.05);
             box-shadow: 0 6px 12px rgba(0, 0, 0, 0.3);
         }
@@ -96,6 +93,23 @@
         /* Estilo para o botão Teacher Resources ocupar duas colunas em telas maiores */
         .teacher-resources {
             grid-column: span 2;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            padding: 20px;
+            background-color: #FFFFFF;
+            border: 2px solid #4CAF50;
+            border-radius: 10px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+            transition: transform 0.3s ease, box-shadow 0.3s ease;
+            width: 100%;
+            box-sizing: border-box;
+        }
+
+        .teacher-resources img {
+            width: 100%;
+            height: auto;
+            max-width: 150px;
         }
 
         /* Responsividade para ajuste das colunas em telas pequenas */
@@ -103,7 +117,6 @@
             .activity-buttons {
                 grid-template-columns: 1fr; /* Todos os botões em uma única coluna em telas muito pequenas */
             }
-
             .teacher-resources {
                 grid-column: span 1; /* Ocupa toda a largura em telas pequenas */
             }
