--- a/Level1/Unit1/index.html
+++ b/Level1/Unit1/index.html
@@ -63,6 +63,7 @@
             justify-content: center;
             align-items: start;
             padding: 0 20px;
+            box-sizing: border-box;
         }
 
         .activity-button {
@@ -75,8 +76,6 @@
             border-radius: 10px;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
             transition: transform 0.3s ease, box-shadow 0.3s ease;
-            width: 100%;
-            box-sizing: border-box;
         }
 
         .activity-button img {
@@ -112,11 +111,12 @@
             max-width: 150px;
         }
 
-        /* Responsividade para ajuste das colunas em telas pequenas */
+        /* Responsividade para manter duas colunas em telas médias e apenas uma em telas pequenas */
         @media (max-width: 600px) {
             .activity-buttons {
                 grid-template-columns: 1fr; /* Todos os botões em uma única coluna em telas muito pequenas */
             }
+
             .teacher-resources {
                 grid-column: span 1; /* Ocupa toda a largura em telas pequenas */
             }
