--- a/Level1/Unit1/index.html
+++ b/Level1/Unit1/index.html
@@ -4,117 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Select an Activity</title>
-    <link rel="stylesheet" href="../CSS/styles.css">
+    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-auth.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-database.js"></script>
     <style>
-        .map-container {
-            width: 100%;
-            position: relative;
-            background-image: url('../../imagens/fundo.png');
-            background-repeat: repeat;
-            background-size: 200%;
-            overflow-y: auto;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-        }
+        /* Suas definições de estilo aqui */
 
-        header {
-            width: 100%;
-            padding: 10px 0;
-            z-index: 10;
-            text-align: center;
-            background: none;
-        }
-
-        header h1 {
-            font-size: 2.5em;
-            color: #4CAF50;
-            font-family: Arial, sans-serif;
-            margin: 0;
-            text-shadow: 1px 1px 2px #000000;
-        }
-
-        .back-button {
-            display: block;
-            margin: 10px auto 20px auto;
-            padding: 10px 20px;
-            background-color: #000000; /* Preto */
-            color: #ffffff; /* Letras brancas */
-            border: none;
-            border-radius: 8px;
-            font-size: 1em;
-            cursor: pointer;
-            transition: background-color 0.3s ease;
-            text-align: center;
-            text-decoration: none;
-            width: fit-content;
-        }
-
-        .back-button:hover {
-            background-color: #333333; /* Cinza escuro ao passar o mouse */
-        }
-
-        .activity-buttons {
-            display: grid;
-            grid-template-columns: repeat(2, 1fr);
-            gap: 15px;
-            max-width: 800px;
-            width: 100%;
-            justify-content: center;
-            align-items: start;
-            padding: 0 20px;
-            box-sizing: border-box;
-        }
-
-        .activity-button,
+        /* Esconde o botão "Teacher Resources" inicialmente */
         .teacher-resources {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            padding: 15px;
-            background-color: #FFFFFF;
-            border: 2px solid #4CAF50;
-            border-radius: 10px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-            transition: transform 0.3s ease, box-shadow 0.3s ease;
-        }
-
-        .activity-button img,
-        .teacher-resources img {
-            width: 100%;
-            height: auto;
-            max-width: 130px; /* Redução para caber em duas colunas em telas menores */
-        }
-
-        .activity-button:hover,
-        .teacher-resources:hover {
-            transform: scale(1.05);
-            box-shadow: 0 6px 12px rgba(0, 0, 0, 0.3);
-        }
-
-        /* Estilo para o botão Teacher Resources ocupar duas colunas em telas maiores */
-        .teacher-resources {
-            grid-column: span 2;
-        }
-
-        /* Responsividade para ajuste das colunas em telas pequenas */
-        @media (max-width: 412px) {
-            .activity-buttons {
-                grid-template-columns: repeat(2, 1fr); /* Mantém duas colunas até 412px */
-            }
-            .activity-button img,
-            .teacher-resources img {
-                max-width: 110px; /* Ajusta o tamanho da imagem em telas pequenas */
-            }
-        }
-
-        @media (max-width: 400px) {
-            .activity-buttons {
-                grid-template-columns: 1fr; /* Coloca todos os botões em uma única coluna abaixo de 400px */
-            }
-            .teacher-resources {
-                grid-column: span 1; /* Ocupa toda a largura em telas muito pequenas */
-            }
+            display: none;
         }
     </style>
 </head>
@@ -122,12 +20,11 @@
     <div class="map-container">
         <header>
             <h1>Select an Activity</h1>
-            <!-- Botão Back posicionado logo abaixo do título -->
             <a href="../index.html" class="back-button">Back</a>
         </header>
         <main>
             <div class="activity-buttons">
-                <!-- Botão Teacher Resources ocupando duas colunas em telas grandes -->
+                <!-- Botão Teacher Resources, que será visível apenas para certos roles -->
                 <a href="lessonplan.html" class="teacher-resources">
                     <img src="../../imagens/resources.png" alt="Teacher Resources">
                 </a>
@@ -154,8 +51,36 @@
     </div>
 
     <script>
-        window.addEventListener("load", () => {
-            window.scrollTo(0, 0);
+        // Configuração do Firebase
+        const firebaseConfig = {
+            apiKey: "AIzaSyDGgo2H_hDKXF88xN7XnLFNUj8ikMY7Xdc",
+            authDomain: "hannahenglishcourse.firebaseapp.com",
+            projectId: "hannahenglishcourse",
+            storageBucket: "hannahenglishcourse.appspot.com",
+            messagingSenderId: "449818788486",
+            appId: "1:449818788486:web:8a49d3f68591e6fb3f0707",
+            measurementId: "G-07VVJG9LRS",
+            databaseURL: "https://hannahenglishcourse-default-rtdb.asia-southeast1.firebasedatabase.app"
+        };
+        firebase.initializeApp(firebaseConfig);
+
+        // Função para verificar o role do usuário
+        firebase.auth().onAuthStateChanged((user) => {
+            if (user) {
+                const userId = user.uid;
+                const userRoleRef = firebase.database().ref(`/usuarios/${userId}/role`);
+
+                userRoleRef.once("value").then((snapshot) => {
+                    const role = snapshot.val();
+                    if (role === "professor" || role === "proprietario") {
+                        document.querySelector(".teacher-resources").style.display = "block";
+                    }
+                }).catch((error) => {
+                    console.error("Erro ao obter o role do usuário:", error);
+                });
+            } else {
+                console.log("Nenhum usuário autenticado");
+            }
         });
     </script>
 </body>
