--- a/Level1/Unit1/index.html
+++ b/Level1/Unit1/index.html
@@ -84,8 +84,7 @@
             box-sizing: border-box;
         }
 
-        .activity-button,
-        .teacher-resources {
+        .activity-button {
             display: flex;
             justify-content: center;
             align-items: center;
@@ -97,22 +96,40 @@
             transition: transform 0.3s ease, box-shadow 0.3s ease;
         }
 
-        .activity-button img,
+        .activity-button img {
+            width: 100%;
+            height: auto;
+            max-width: 130px;
+        }
+
+        .activity-button:hover {
+            transform: scale(1.05);
+            box-shadow: 0 6px 12px rgba(0, 0, 0, 0.3);
+        }
+
+        /* Botão Teacher Resources ocupando duas colunas */
+        .teacher-resources {
+            grid-column: span 2;
+            display: none; /* Inicialmente escondido até a verificação do role */
+            justify-content: center;
+            align-items: center;
+            padding: 15px;
+            background-color: #FFFFFF;
+            border: 2px solid #4CAF50;
+            border-radius: 10px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+            transition: transform 0.3s ease, box-shadow 0.3s ease;
+        }
+
         .teacher-resources img {
             width: 100%;
             height: auto;
             max-width: 130px;
         }
 
-        .activity-button:hover,
         .teacher-resources:hover {
             transform: scale(1.05);
             box-shadow: 0 6px 12px rgba(0, 0, 0, 0.3);
-        }
-
-        /* Inicialmente escondemos o botão Teacher Resources */
-        .teacher-resources {
-            display: none;
         }
 
         /* Responsividade para ajuste das colunas em telas pequenas */
@@ -145,7 +162,7 @@
         </header>
         <main>
             <div class="activity-buttons">
-                <!-- Botão Teacher Resources, que será visível apenas para certos roles -->
+                <!-- Botão Teacher Resources ocupando duas colunas em telas grandes -->
                 <a href="lessonplan.html" class="teacher-resources">
                     <img src="../../imagens/resources.png" alt="Teacher Resources">
                 </a>
