--- a/Level1/Unit1/index.html
+++ b/Level1/Unit1/index.html
@@ -163,7 +163,7 @@
         <main>
             <div class="activity-buttons">
                 <!-- Botão Teacher Resources ocupando duas colunas em telas grandes -->
-                <a href="../teacher/index.html" class="teacher-resources">                        
+                <a href="teacher/index.html" class="teacher-resources">                        
                     <img src="../../imagens/resources.png" alt="Teacher Resources">
                 </a>
                 <a href="listening.html" class="activity-button">
