--- a/Level1/Unit1/teacher/index.html
+++ b/Level1/Unit1/teacher/index.html
@@ -8,12 +8,15 @@
     <style>
         /* Fonte substituída por Arial, que é universal */
         body {
-            font-family: 'Arial', sans-serif;
-            background-color: #f4f4f9;
-            color: #333;
-            margin: 0;
-            padding: 0;
-        }
+    font-family: 'Arial', sans-serif;
+    background-image: url('../../../imagens/fundo.png');
+    background-repeat: repeat;
+    background-size: auto;
+    background-color: #f4f4f9; /* Cor de segurança caso a imagem não carregue */
+    color: #333;
+    margin: 0;
+    padding: 0;
+}
 
         h1, h2 {
             color: #4CAF50;
