--- a/Level1/Unit1/teacher/index.html
+++ b/Level1/Unit1/teacher/index.html
@@ -151,9 +151,9 @@
     
     <!-- Grid de Botões Atualizado -->
     <div class="activities">
-       <a href="teacher/Fine Motor Skills/index.html"><img src="../../../imagens/botoes/Fine_Motor_Skills_Button.png" alt="Fine Motor Skills"></a>
-        <a href="teacher/Missing Letter/index.html"><img src="../../../imagens/botoes/missing_letter_button.png" alt="Missing Letter"></a>
-        <a href="teacher/Mixed Letters/index.html"><img src="../../../imagens/botoes/mixed_letters_button.png" alt="Mixed Letters"></a>     
+       <a href="Fine Motor Skills/index.html"><img src="../../../imagens/botoes/Fine_Motor_Skills_Button.png" alt="Fine Motor Skills"></a>
+        <a href="Missing Letter/index.html"><img src="../../../imagens/botoes/missing_letter_button.png" alt="Missing Letter"></a>
+        <a href="Mixed Letters/index.html"><img src="../../../imagens/botoes/mixed_letters_button.png" alt="Mixed Letters"></a>     
     </div>
 
     <!-- Div onde o texto do arquivo será carregado -->
